2000-10-01  Gary Houston  <ghouston@arglist.com>

	* net_db.c: declare inet_aton only if HAVE_INET_ATON is not
	defined.  thanks to Han-Wen Nienhuys.

2000-09-30  Gary Houston  <ghouston@arglist.com>

	* filesys.c (scm_stat2scm), posix.c (s_scm_mknod): don't use
	S_ISSOCK or S_IFSOCK if not defined.  thanks to Bruce Korb.

2000-09-29  Neil Jerram  <neil@ossau.uklinux.net>

	* Makefile.am (guile-procedures.txt): Insert a new rule such that
	the output from guile-snarf.awk is processed by makeinfo to
	produce guile-procedures.txt.

	* guile-snarf.awk.in: Modify the way we snarf docstrings such that
	the output is Texinfo-compliant and suitable for post-processing
	with makeinfo.  (Trim leading "./" from C file name if
	present; reformat procedure prototype line in @deffn format;
	improve representation of args to show optional and rest args;
	explicitly quote quotation marks where they are used inside an AWK
	regexp.)

	* net_db.c (scm_inet_ntoa): Docstring fix: missing newline
	inserted.

	* hashtab.c (scm_hashx_create_handle_x, scm_hashx_ref): Insert
	spaces between C parameters so that the snarfer doesn't coalesce
	them all into a single very long-named parameter.

2000-09-27  Neil Jerram  <neil@ossau.uklinux.net>

	* list.c (scm_append): Use @example texinfo markup in docstring.

2000-09-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* strings.c (scm_string, scm_make_string, scm_string_set_x,
	scm_string_append), strop.c (scm_string_upcase_x,
	scm_string_downcase_x), strports.c (st_resize_port), symbols.c
	(scm_sym2vcell, scm_sym2ovcell_soft, scm_intern_obarray_soft,
	scm_intern_symbol, scm_unintern_symbol), unif.c	(scm_cvref,
	scm_uniform_vector_ref, scm_array_set_x, rapr1):  Replace calls to
	SCM_UCHARS with SCM_STRING_UCHARS or SCM_SYMBOL_UCHARS.

	* symbols.h (SCM_UCHARS):  Deprecated.

2000-09-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.c (scm_gc_sweep):  Replace SCM_CHARS by SCM_COMPLEX_MEM.

	* numbers.h (SCM_COMPLEX_MEM):  Added as a replacement for